applications/metrics/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: metrics
  namespace: metricsspec:
  parentRefs:
  - name: vault
    namespace: vault
    sectionName: https-m
  rules:
  - backendRefs:
    - name: metrics-metrics-server
      namespace: metrics
      port: 443
