applications/metrics/ingress.yml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: metrics
  annotations:
    cert-manager.io/inject-ca-from-secret: metrics/metrics-tls
webhooks:
- name: metrics.hell.local
  admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: metrics-metrics-server
      namespace: metrics
      path: /
      port: 443
  sideEffects: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics
  namespace: metrics
  annotations:
    cert-manager.io/issuer: "vault-acme"
    cert-manager.io/common-name: "metrics.hell.local"
    cert-manager.io/private-key-algorithm: "ECDSA"
    cert-manager.io/private-key-size: "521"
    cert-manager.io/duration: "216h"
    nginx.org/ssl-services: "metrics-metrics-server"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - metrics.hell.local
    secretName: metrics-tls
  rules:
  - host: metrics.hell.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metrics-metrics-server
            port:
              number: 443
